# aircraft-detector-classificator

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml
conf/: config.yaml
conf/dataset/: coco_airplane.yaml
conf/model/: yolov8n_base.yaml  yolov8n_mod1.yaml  yolov8n_mod2.yaml
conf/training/: default.yaml
model_repository/convnext_classifier/: config.pbtxt
model_repository/convnext_classifier/1/: config.json
model_repository/yolov8_airplane/: config.pbtxt
src/api/: main.py  triton_client.py
src/data/: get_coco_airplane_ds.py
src/frontend/: app.py
src/models/: custom_model_yolov8n_1.yaml  custom_model_yolov8n_2.yaml
src/training/: export_model.py  train_yolo.py
src/utils/: aircrafts_lables.py  env_config.py  utils.py
