[project]
name = "aircraft-detector-classificator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiftyone>=1.14.0",
    "hydra-core>=1.3.2",
    "mlflow>=3.10.1",
    "pycocotools>=2.0.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "ultralytics>=8.4.33",
]
